[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search_agent"
version = "0.1.0"
description = "Search agent that parses information from the web"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions,a2a]",
    "uvicorn",
    "ddgs",
    "trafilatura",
    "a2a-sdk[http-server]"
]

[project.scripts]
search_agent_server = "search_agent.server:main"

